editor/test/resources/errors_project/errors/button_break_self.gui
script: ""
background_color {
  x: 0.0
  y: 0.0
  z: 0.0
  w: 0.0
}
nodes {
  position {
    x: 0.0
    y: 0.0
    z: 0.0
    w: 1.0
  }
  rotation {
    x: 0.0
    y: 0.0
    z: 0.0
    w: 1.0
  }
  scale {
    x: 1.0
    y: 1.0
    z: 1.0
    w: 1.0
  }
  size {
    x: 128.0
    y: 128.0
    z: 0.0
    w: 1.0
  }
  color {
    x: 1.0
    y: 1.0
    z: 1.0
    w: 1.0
  }
  type: TYPE_BOX
  blend_mode: BLEND_MODE_ALPHA
  texture: "missing_texture/logo"
  id: "box"
  xanchor: XANCHOR_NONE
  yanchor: YANCHOR_NONE
  pivot: PIVOT_CENTER
  adjust_mode: ADJUST_MODE_FIT
  layer: ""
  inherit_alpha: true
  slice9 {
    x: 0.0
    y: 0.0
    z: 0.0
    w: 0.0
  }
  clipping_mode: CLIPPING_MODE_NONE
  clipping_visible: true
  clipping_inverted: false
  alpha: 1.0
  template_node_child: false
  size_mode: SIZE_MODE_AUTO
}
material: "/builtins/materials/gui.material"
adjust_reference: ADJUST_REFERENCE_LEGACY
max_nodes: 512
